--- a/StakeHolder-Contract/package.json
+++ b/StakeHolder-Contract/package.json
@@ -1,10 +1,12 @@
 {
   "devDependencies": {
+    "@chainlink/contracts": "^0.5.1",
     "@nomiclabs/hardhat-ethers": "^2.2.1",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.7.2",
-    "hardhat": "^2.12.1"
+    "hardhat": "^2.12.1",
+    "hardhat-deploy": "^0.11.19"
   }
 }
