--- a/StakeHolder-Contract/package.json
+++ b/StakeHolder-Contract/package.json
@@ -3,6 +3,7 @@
     "@chainlink/contracts": "^0.5.1",
     "@nomiclabs/hardhat-ethers": "^2.2.1",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@openzeppelin/contracts": "^4.7.3",
     "chai": "^4.3.6",
     "dotenv": "^16.0.3",
     "ethereum-waffle": "^3.4.4",
